# Meeting-local

./: .gitignore  README.md
desktop/: .gitignore  LICENSE  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
desktop/scripts/: build-cuda.ps1  build-metal.sh  build-vulkan.ps1
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/llm-sidecar/: Cargo.toml
desktop/src-tauri/llm-sidecar/src/: main.rs
desktop/src-tauri/src/: globals.rs  lib.rs  macros.rs  state.rs
desktop/src-tauri/src/audio/: audio_processing.rs  ffmpeg_mixer.rs  hardware_detector.rs  mod.rs  model_recommendations.rs  recording_manager.rs  recording_preferences.rs  retranscription.rs
desktop/src-tauri/src/audio/capture/: core_audio.rs
desktop/src-tauri/src/audio/devices/: configuration.rs
desktop/src-tauri/src/audio/devices/platform/: windows.rs
desktop/src-tauri/src/audio/file_io/: audio_writer.rs  mod.rs  transcript_writer.rs  utils.rs
desktop/src-tauri/src/audio/pipeline/: capture.rs  manager.rs  mixer.rs  mod.rs  processor.rs  ring_buffer.rs
desktop/src-tauri/src/audio/processing/: filters.rs  mod.rs  noise_suppression.rs  normalizer.rs  resampling.rs  spectral.rs
desktop/src-tauri/src/audio/recording/: device_events.rs  lifecycle.rs  mod.rs  pause_resume.rs  state.rs  types.rs
desktop/src-tauri/src/audio/transcription/: diarization_integration.rs  globals.rs  mod.rs  transcriber.rs  types.rs  worker.rs
desktop/src-tauri/src/chat/: commands.rs  completion.rs  message_commands.rs  mod.rs  session_commands.rs  task_registry.rs  tool_orchestration.rs  types.rs
desktop/src-tauri/src/database/: categories_repo.rs  chat_repo.rs  chat_session_repo.rs  manager.rs  mcp_repo.rs  migrations.rs  mod.rs  model_config_repo.rs  recordings_repo.rs  search.rs  settings_repo.rs  template_repo.rs  tools_repo.rs  transcripts_repo.rs
desktop/src-tauri/src/database/models/: category_tag.rs  chat.rs  mcp.rs  mod.rs  model_config.rs  recording.rs  settings.rs  template.rs  tool.rs  transcript.rs
desktop/src-tauri/src/diarization/: engine.rs  mod.rs  model_manager.rs  sortformer_provider.rs  speaker_db.rs
desktop/src-tauri/src/diarization/sortformer/: config.rs  engine.rs  features.rs  mod.rs  postprocess.rs  streaming.rs  types.rs
desktop/src-tauri/src/llm_engine/: commands.rs  engine.rs  mod.rs  provider.rs
desktop/src-tauri/src/llm_engine/model_manager/: downloader.rs  manager.rs  mod.rs  registry.rs  tool_support.rs  types.rs
desktop/src-tauri/src/llm_engine/providers/: mod.rs  ollama_provider.rs  sidecar_provider.rs
desktop/src-tauri/src/mcp/: client.rs  commands.rs  manager.rs  mod.rs
desktop/src-tauri/src/stubs/: analytics.rs  api.rs  mod.rs  parakeet.rs  tray.rs
desktop/src-tauri/src/templates/: commands.rs  mod.rs
desktop/src-tauri/src/tools/: commands.rs  executor.rs  mod.rs
desktop/src-tauri/src/whisper_engine/: commands.rs  downloader.rs  engine.rs  mod.rs  model_loader.rs  model_registry.rs  parallel_processor.rs  text_cleaner.rs  types.rs
desktop/src-tauri/templates/: brainstorm_ideation.json  daily_standup.json  interview_debrief.json  one_on_one.json  project_sync.json  psychatric_session.json  retrospective.json  sales_marketing_client_call.json  standard_meeting.json
desktop/src/app/: globals.css  layout.tsx  page.tsx
desktop/src/app/schedule/: page.tsx
desktop/src/app/settings/: page.tsx
desktop/src/app/templates/: page.tsx
desktop/src/app/tools/: page.tsx
desktop/src/app/transcripts/: page.tsx
desktop/src/components/: CategoryBadge.tsx  CategoryTagSelector.tsx  DeviceSelector.tsx  LanguageSelection.tsx  ModelSelector.tsx  RecordingControls.tsx  SearchFilters.tsx  TranscriptDisplay.tsx  app-sidebar.tsx  dashboard-view.tsx  floating-control.tsx  post-recording-modal.tsx  recording-card.tsx  recording-view.tsx  settings-popover.tsx  speaker-label.tsx
desktop/src/hooks/: useAudioDevices.ts  useCategories.ts  useChat.ts  useChatSessions.ts  useDefaultModel.ts  useDiarization.ts  useLlm.ts  useMcpServers.ts  useRecording.ts  useRecordings.ts  useRetranscription.ts  useSearch.ts  useSettings.ts  useTemplates.ts  useTools.ts
desktop/src/lib/: hardware.ts  whisper.ts
desktop/src/types/: chat.ts  database.ts  mcp.ts  templates.ts  tools.ts
(+12 files in other folders)
