[package]
name = "meeting-local"
version = "0.1.0"
description = "A local meeting recording app with Whisper transcription"
authors = ["You"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# GPU acceleration features for whisper-rs
[features]
default = ["platform-default"]
platform-default = []

# GPU acceleration options
metal = ["whisper-rs/metal"]
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
hipblas = ["whisper-rs/hipblas"]

# CPU optimizations
openblas = ["whisper-rs/openblas"]
openmp = ["whisper-rs/openmp"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
which = "6.0.1"

[dependencies]
# Core
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
once_cell = "1.17.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1"

# Audio capture
cpal = "0.15.3"

# Dates
chrono = { version = "0.4.31", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1.40"
which = "6.0.1"

# Bytes
bytemuck = "1.16.1"

# Audio processing
ebur128 = "0.1"
nnnoiseless = "0.5"

# Whisper-rs for speech recognition
whisper-rs = { version = "0.13.2", features = ["raw-api"] }
futures-util = "0.3"
silero_rs = { git = "https://github.com/emotechlab/silero-rs", rev = "26a6460", package = "silero" }

# Speaker diarization
pyannote-rs = "0.3"

# Sortformer diarization (standalone)
rustfft = "6.2"
ort = "2.0.0-rc.10"

# Async
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = "0.7"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "stream"] }

# Utils
crossbeam = "0.8.4"
dashmap = "6.1.0"
dirs = "5.0.1"
sysinfo = "0.32"
lazy_static = { version = "1.4.0" }
realfft = "3.4.0"
rubato = "0.16"
ffmpeg-sidecar = "2.0"
ndarray = "0.16"
bytes = { version = "1.9.0", features = ["serde"] }
ringbuf = "0.4.8"

# Tauri
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.6.2", features = ["protocol-asset", "macos-private-api"] }
cidre = { git = "https://github.com/yury/cidre", rev = "a9587fa", features = ["av"] }
dasp = "0.11.0"
futures-channel = "0.3.31"
whisper-rs = { version = "0.13.2", features = ["raw-api", "metal", "coreml"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api"] }
futures-channel = "0.3.31"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api"] }
futures-channel = "0.3.31"

[dev-dependencies]
tempfile = "3.3.0"

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "51c3b43" }

[workspace]
members = [".", "llm-sidecar"]
